# fast-hadamard-transform

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  wheel_only.yml
benchmarks/: benchmark_fast_hadamard_transform.py
csrc/: code_gen.py  fast_hadamard_transform.cpp  fast_hadamard_transform.h  fast_hadamard_transform_common.h  fast_hadamard_transform_cuda.cu  fast_hadamard_transform_gpu.cu  fast_hadamard_transform_special.h  vendor.h
fast_hadamard_transform/: __init__.py  fast_hadamard_transform_interface.py
tests/: test_fast_hadamard_transform.py
